RESOLVED FIXED 116892
fourthTier: FTL should call masqueradesAsUndefinedWatchpointIfIsStillValid() in all of the places where it currently calls masqueradesAsUndefinedWatchpointIsStillValid()
https://bugs.webkit.org/show_bug.cgi?id=116892
Summary fourthTier: FTL should call masqueradesAsUndefinedWatchpointIfIsStillValid() ...
Filip Pizlo
Reported 2013-05-28 14:46:59 PDT
In all of those places we also want to plant the watchpoint, if it is indeed still valid.
Attachments
the patch (1.93 KB, patch)
2013-05-28 14:51 PDT, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2013-05-28 14:51:21 PDT
Created attachment 203092 [details] the patch
Filip Pizlo
Comment 2 2013-05-28 14:53:19 PDT
Note You need to log in before you can comment on or make changes to this bug.