fourthTier: FTL should call masqueradesAsUndefinedWatchpointIfIsStillValid() in all of the places where it currently calls masqueradesAsUndefinedWatchpointIsStillValid() https://bugs.webkit.org/show_bug.cgi?id=116892

Reviewed by Oliver Hunt.

All of those places mean to plant the watchpoint if it's still valid.

* ftl/FTLLowerDFGToLLVM.cpp:
(JSC::FTL::LowerDFGToLLVM::equalNullOrUndefined):
(JSC::FTL::LowerDFGToLLVM::speculateNonNullObject):

Canonical link: https://commits.webkit.org/136980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153196 268f45cc-cd09-0410-ab3c-d52691b4dbfc