Source/JavaScriptCore/API/JSVirtualMachine.mm
@@ -34,6 +34,7 @@
 #import "JSVirtualMachine.h"
 #import "JSVirtualMachineInternal.h"
 #import "JSWrapperMap.h"
+#import "SlotVisitorInlines.h"
 
 static NSMapTable *globalWrapperCache = 0;
 
