LayoutTests/fast/js/script-tests/dfg-arguments-cross-code-origin.js
@@ -17,5 +17,8 @@ function baz(x) {
     return bar(foo(x));
 }
 
-for (var i = 0; i < 200; ++i)
+silentTestPass = true;
+noInline(baz);
+
+for (var i = 0; i < 200; i = dfgIncrement({f:baz, i:i + 1, n:100}))
     shouldBe("baz(42)", "42");
