LayoutTests/fast/js/script-tests/dfg-arguments-unexpected-escape.js
@@ -20,5 +20,8 @@ function bar(x) {
     return foo(x);
 }
 
-for (var i = 0; i < 200; ++i)
+silentTestPass = true;
+noInline(bar);
+
+for (var i = 0; i < 200; i = dfgIncrement({f:bar, i:i + 1, n:100}))
     shouldBe("bar(42)", "84");
